# signet-sdk

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PARMIGIANA_CONTEXT.md  README.md  TEST_PLAN.md  rust.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: parmigiana-tests.yml  release.yml  rust.yml
crates/bundle/: Cargo.toml  README.md
crates/bundle/src/: bundle.rs  call.rs  driver.rs  lib.rs  send.rs  trevm.rs
crates/bundle/src/call/: alloy.rs  driver.rs  error.rs  mod.rs  trevm.rs  ty.rs
crates/bundle/src/send/: bundle.rs  decoded.rs  driver.rs  error.rs  mod.rs
crates/constants/: Cargo.toml  README.md
crates/constants/src/: contracts.rs  host.rs  lib.rs  pecorino.rs  rollup.rs  test_utils.rs  tokens.rs
crates/constants/src/chains/: gouda.rs  mainnet.rs  mod.rs  parmigiana.rs  pecorino.rs  test_utils.rs
crates/constants/src/types/: chains.rs  environment.rs  error.rs  height.rs  host.rs  mod.rs  rollup.rs  tokens.rs
crates/evm/: Cargo.toml  README.md
crates/evm/src/: account.rs  aliases.rs  bundle.rs  convert.rs  driver.rs  hardfork.rs  lib.rs  macros.rs  outcome.rs  precompiles.rs  result.rs  sys_log.rs  types.rs
crates/evm/src/journal/: coder.rs  index.rs  mod.rs
crates/evm/src/orders/: framed.rs  inspector.rs  mod.rs
crates/evm/src/sys/: driver.rs  logs.rs  mod.rs  native.rs  token.rs  transact.rs
crates/extract/: Cargo.toml  README.md
crates/extract/src/: block.rs  events.rs  extracted.rs  extractor.rs  lib.rs  step.rs  trait.rs
crates/extract/src/test_utils/: host_spec.rs  mod.rs  notif_spec.rs  ru_spec.rs
crates/journal/: Cargo.toml
crates/journal/src/: host.rs  lib.rs  meta.rs  set.rs  versions.rs
crates/orders/: Cargo.toml  README.md
crates/orders/src/: fee_policy.rs  filler.rs  lib.rs  order_sender.rs  permit2.rs  preflight.rs  traits.rs
crates/orders/src/impls/: fill_provider.rs  mod.rs  tx_cache.rs
crates/orders/src/stream/: mod.rs  predicates.rs
crates/orders/tests/: filler.rs
crates/rpc/: Cargo.toml  README.md
crates/rpc/examples/: filler.rs  order.rs
crates/rpc/src/: cache.rs  config.rs  ctx.rs  forwarder.rs  lib.rs  receipts.rs  util.rs
crates/rpc/src/debug/: endpoints.rs  mod.rs
crates/rpc/src/eth/: endpoints.rs  error.rs  forwarder.rs  helpers.rs  mod.rs
crates/rpc/src/interest/: filters.rs  kind.rs  mod.rs  subs.rs
crates/rpc/src/signet/: endpoints.rs  error.rs  mod.rs
crates/rpc/src/trace/: endpoints.rs  mod.rs
crates/sim/: Cargo.toml
crates/sim/src/: built.rs  cache.rs  env.rs  error.rs  inst.rs  item.rs  lib.rs  outcome.rs  task.rs
crates/sim/src/cache/: error.rs  item.rs  mod.rs  state.rs  store.rs  validity.rs
crates/sim/src/env/: host.rs  mod.rs  rollup.rs  shared.rs  sim_env.rs
crates/sim/tests/: basic_sim.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: bundle_submitter.rs  chain.rs  convert.rs  evm.rs  lib.rs  orders.rs  parmigiana_context.rs  users.rs
crates/test-utils/src/contracts/: counter.rs  mod.rs  reverts.rs  system.rs  token.rs
crates/test-utils/src/specs/: host_spec.rs  mod.rs  notif_spec.rs  ru_spec.rs
crates/test-utils/tests/: basic_sim.rs  bundle.rs  bundle_submitter.rs  deserialization_fuzz.rs  evm.rs  extract.rs  fill_behavior.rs  host_sim.rs  orders_filler.rs  parmigiana.rs  parmigiana_harness.rs
crates/test-utils/tests/common/: mod.rs  parmigiana.rs
crates/tx-cache/: Cargo.toml
crates/tx-cache/src/: client.rs  error.rs  lib.rs  types.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: bundle.rs  confirmation.rs  confirmed.rs  lib.rs  magic_sig.rs  node.rs  receipt.rs  slot.rs  test_utils.rs  tx_location.rs  utils.rs
crates/types/src/agg/: error.rs  fill.rs  mod.rs  order.rs
crates/types/src/config/: env_utils.rs  error.rs  host.rs  mod.rs  rollup.rs  tokens.rs
crates/types/src/fills/: context.rs  error.rs  mod.rs
crates/types/src/primitives/: block.rs  header.rs  mod.rs
crates/types/src/primitives/header/: mod.rs  v1.rs  v2.rs
crates/types/src/seq/: mod.rs  resp.rs
crates/types/src/signing/: error.rs  fill.rs  mod.rs  order.rs
crates/zenith/: Cargo.toml  README.md
crates/zenith/abi/: Transactor.json
crates/zenith/src/: bindings.rs  block.rs  lib.rs  serde_helpers.rs  trevm.rs
crates/zenith/src/orders/: agg.rs  mod.rs  signed.rs
crates/zenith/src/orders/signing/: fill.rs  mod.rs  order.rs
docs/: TESTING.md
examples/: filler.rs
scripts/: run_parmigiana_live.sh
tests/: parmigiana.toml
tests/artifacts/: enter_tx.json  order_hash.json
