[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.9.1"
edition = "2021"
rust-version = "1.81"
authors = ["init4"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/init4tech/signet-sdk"
repository = "https://github.com/init4tech/signet-sdk"

[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = 2
strip = false

[profile.bench]
inherits = "profiling"

[profile.ci-rust]
inherits = "dev"
strip = true
debug = false
incremental = false

[workspace.dependencies]
signet-bundle = { version = "0.9", path = "crates/bundle" }
signet-constants = { version = "0.9", path = "crates/constants" }
signet-evm = { version = "0.9", path = "crates/evm" }
signet-extract = { version = "0.9", path = "crates/extract" }
signet-node = { version = "0.9", path = "crates/node" }
signet-sim = { version = "0.9", path = "crates/sim" }
signet-types = { version = "0.9", path = "crates/types" }
signet-tx-cache = { version = "0.9", path = "crates/tx-cache" }
signet-zenith = { version = "0.9", path = "crates/zenith" }
signet-test-utils = { version = "0.9", path = "crates/test-utils" }

# ajj
ajj = { version = "0.3.4" }

# trevm
trevm = { version = "0.27.1", features = ["full_env_cfg"] }

# Alloy periphery crates
alloy = { version = "1.0.19", features = [
    "full",
    "rpc-types-mev",
    "genesis",
    "arbitrary",
] }
alloy-contract = { version = "1.0.19", features = ["pubsub"] }

# Async
tokio = { version = "1.43.0", features = ["macros"] }
async-trait = "0.1.87"

# Pinned for compatibility with reth
parking_lot = "0.12"

# Misc
eyre = "0.6.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
reqwest = "0.12.9"
chrono = "0.4.38"
uuid = "1.16.0"

# Test Utils
alloy-rlp = "0.3.11"
