[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.16.0-rc.8"
edition = "2021"
rust-version = "1.87"
authors = ["init4"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/init4tech/signet-sdk"
repository = "https://github.com/init4tech/signet-sdk"

[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = 2
strip = false

[profile.bench]
inherits = "profiling"

[profile.ci-rust]
inherits = "dev"
strip = true
debug = false
incremental = false

[workspace.dependencies]
signet-bundle = { version = "0.16.0-rc.8", path = "crates/bundle" }
signet-constants = { version = "0.16.0-rc.8", path = "crates/constants" }
signet-evm = { version = "0.16.0-rc.8", path = "crates/evm" }
signet-extract = { version = "0.16.0-rc.8", path = "crates/extract" }
signet-journal = { version = "0.16.0-rc.8", path = "crates/journal" }
signet-node = { version = "0.16.0-rc.8", path = "crates/node" }
signet-orders = { version = "0.16.0-rc.8", path = "crates/orders" }
signet-sim = { version = "0.16.0-rc.8", path = "crates/sim" }
signet-types = { version = "0.16.0-rc.8", path = "crates/types" }
signet-tx-cache = { version = "0.16.0-rc.8", path = "crates/tx-cache" }
signet-zenith = { version = "0.16.0-rc.8", path = "crates/zenith" }

signet-test-utils = { version = "0.16.0-rc.8", path = "crates/test-utils" }

# trevm
trevm = { version = "0.34.0", features = ["full_env_cfg"] }

# Alloy periphery crates
alloy-core = "1.4"
alloy = { version = "1.0.35", features = [
    "full",
    "rpc-types-mev",
    "genesis",
    "arbitrary",
] }
alloy-contract = { version = "1.0.35", features = ["pubsub"] }

# Async
tokio = { version = "1.43.0", features = ["macros"] }
async-trait = "0.1.87"
futures-util = "0.3.31"

# Pinned for compatibility with reth
parking_lot = "0.12"

# Misc
eyre = "0.6.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
reqwest = "0.12.9"
chrono = "0.4.38"
uuid = "1.16.0"

# Test Utils
alloy-rlp = "0.3.11"
