[package]
name = "signet-bundle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
trevm.workspace = true
zenith-types.workspace = true

alloy.workspace = true

serde.workspace = true
