[package]
name = "signet-bundle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-types.workspace = true
signet-evm.workspace = true

trevm.workspace = true
signet-zenith.workspace = true

alloy.workspace = true

serde.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
