[package]
name = "signet-bundle"
description = "Signet bundle library for creating and simulating Signet bundles."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-types.workspace = true
signet-evm.workspace = true

trevm.workspace = true

alloy.workspace = true

serde.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
