[package]
name = "signet-constants"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true


[features]
default = []
test-utils = []
