[package]
name = "signet-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-extract.workspace = true
signet-types.workspace = true

trevm.workspace = true
signet-zenith.workspace = true

alloy.workspace = true
reth.workspace = true

thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
reth-chainspec.workspace = true
reth-db.workspace = true
reth-db-common.workspace = true

trevm = { workspace = true, features = ["test-utils"] }

[features]
default = []
test_utils = []