[package]
name = "signet-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-extract.workspace = true
signet-types.workspace = true
signet-zenith.workspace = true

trevm = { workspace = true, features = ["secp256r1"] }

alloy.workspace = true

thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
trevm = { workspace = true, features = ["test-utils"] }

[features]
default = []
