[package]
name = "signet-evm"
description = "EVM Signet Utilities"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-extract.workspace = true
signet-journal.workspace = true
signet-types.workspace = true
signet-zenith.workspace = true

trevm.workspace = true

alloy.workspace = true
bitflags = "2.10.0"

thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
trevm = { workspace = true, features = ["test-utils"] }

[features]
default = []
