[package]
name = "signet-extract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-types.workspace = true

zenith-types.workspace = true

alloy.workspace = true
reth.workspace = true

tracing.workspace = true
