[package]
name = "signet-extract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-types.workspace = true

signet-zenith.workspace = true

alloy.workspace = true
reth.workspace = true

tracing.workspace = true

# test utils
reth-exex = { workspace = true, optional = true }

[dev-dependencies]
signet-types = { workspace = true, features = ["test-utils"] }
reth-exex = { workspace = true }

[features]
default = []
test-utils = ["dep:reth-exex", "signet-types/test-utils"]