[package]
name = "signet-extract"
description = "Logic for extracting events and other data from host chain blocks, used in Signet."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-types.workspace = true

signet-zenith.workspace = true

alloy.workspace = true

