[package]
name = "signet-journal"
description = "Utilities for working with trevm journals in the Signet chain."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy.workspace = true
futures-util = "0.3.31"
thiserror.workspace = true
trevm.workspace = true
