[package]
name = "signet-orders"
description = "Utilities for placing and filling orders on Signet."

# Temporary while crate settles.
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
