[package]
name = "signet-orders"
description = "Utilities for placing and filling orders on Signet."

# Temporary while crate settles.
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-bundle.workspace = true
signet-constants.workspace = true
signet-tx-cache.workspace = true
signet-types.workspace = true
signet-zenith.workspace = true

alloy.workspace = true
chrono.workspace = true
futures-util.workspace = true
thiserror.workspace = true
tracing.workspace = true
