[package]
name = "signet-sim"
description = "Signet simulation utilities."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-bundle.workspace = true
signet-evm.workspace = true
signet-types.workspace = true
signet-zenith.workspace = true

alloy.workspace = true

tokio.workspace = true
tracing.workspace = true
trevm.workspace = true
thiserror.workspace = true

parking_lot.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
alloy = { workspace = true, features = ["getrandom"] }