[package]
name = "signet-test-utils"
description = "Common utilities for testing Signet components"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-constants = { workspace = true, features = ["test-utils"] }
signet-types.workspace = true
signet-evm.workspace = true
signet-zenith.workspace = true
signet-extract.workspace = true
signet-bundle.workspace = true
signet-sim.workspace = true

trevm = { workspace = true, features = ["test-utils"] }

alloy.workspace = true

tokio = { workspace = true, features = ["test-util", "time"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }
