[package]
name = "signet-test-utils"
description = "Common utilities for testing Signet components"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-bundle.workspace = true
signet-constants = { workspace = true, features = ["test-utils"] }
signet-evm.workspace = true
signet-extract.workspace = true
signet-orders.workspace = true
signet-sim.workspace = true
signet-types.workspace = true
signet-zenith.workspace = true

trevm = { workspace = true, features = ["test-utils"] }

alloy.workspace = true
futures-util.workspace = true

tokio = { workspace = true, features = ["test-util", "time"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
chrono.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
