[package]
name = "signet-tx-cache"
description = "Types and helpers for using the Signet transaction cache"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-bundle.workspace = true
signet-types.workspace = true

alloy.workspace = true

eyre.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde"] }