[package]
name = "signet-tx-cache"
description = "Types and helpers for using the Signet transaction cache"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
sse = ["dep:eventsource-stream", "dep:serde_json", "reqwest/stream"]

[dependencies]
signet-bundle.workspace = true
signet-constants.workspace = true
signet-types.workspace = true

alloy.workspace = true
futures-util.workspace = true

eventsource-stream = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
tracing.workspace = true
uuid = { workspace = true, features = ["serde"] }
thiserror.workspace = true
url = "2.5.7"

[dev-dependencies]
serde_urlencoded = "0.7.1"
uuid = { workspace = true, features = ["serde", "v4"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
