[package]
name = "signet-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-zenith.workspace = true

alloy = { workspace = true, features = ["eips"] }

hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros"] }
