[package]
name = "signet-types"
description = "A collection of types used in Signet."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
signet-zenith.workspace = true
signet-constants.workspace = true

alloy.workspace = true

serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
chrono.workspace = true

proptest = { version = "1.6", optional = true }

[dev-dependencies]
serde_json.workspace = true
tokio = { version = "1.37.0", features = ["macros"] }

[features]
proptest = ["dep:proptest", "alloy/arbitrary"]
