[package]
name = "signet-zenith"
description = "Types for the zenith smart contracts"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
trevm.workspace = true

alloy = { version = "=0.11.1", features = ["full", "json-rpc", "signer-aws", "rpc-types-mev", "rlp"] }

serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.94"
tokio = { version = "1.37.0", features = ["macros"] }
