[package]
name = "signet-zenith"
description = "Types for the zenith smart contracts"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
trevm.workspace = true

alloy = { workspace = true, features = ["full", "json-rpc", "signer-aws", "rpc-types-mev", "rlp"] }
alloy-core.workspace = true

serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.94"
